# alabos

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CNAME  LICENSE  MANIFEST.in  README.md  TODO  advance_topics.html  alab_management.alarm.html  alab_management.builders.experimentbuilder.html  alab_management.builders.html  alab_management.builders.samplebuilder.html  alab_management.config.html  alab_management.dashboard.html  alab_management.dashboard.routes.html  alab_management.data_explorer.html  alab_management.db.html  alab_management.device_def.html  alab_management.device_manager.html  alab_management.device_view.dbattributes.html  alab_management.device_view.device.html  alab_management.device_view.device_view.html  alab_management.device_view.html  alab_management.executor.html  alab_management.experiment_manager.html  alab_management.experiment_view.completed_experiment_view.html  alab_management.experiment_view.experiment.html  alab_management.experiment_view.experiment_view.html  alab_management.experiment_view.html  alab_management.html  alab_management.lab_manager.html  alab_management.lab_status.html  alab_management.lab_view.html  alab_management.logger.html  alab_management.op_def.html  alab_management.resource_manager.enums.html  (+49 more)
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: black.yaml  ci.yaml  page.yaml
_modules/: index.html
_modules/alab_management/: alarm.html  config.html  dashboard.html  db.html  device_manager.html  executor.html  experiment_manager.html  lab_manager.html  lab_view.html  logger.html  sample_position.html  task_actor.html  task_launcher.html  task_manager.html  user_input.html
_sources/: alab_management.alarm.rst  alab_management.builders.experimentbuilder.rst  alab_management.builders.rst.txt  alab_management.builders.samplebuilder.rst.txt  alab_management.config.rst.txt  alab_management.dashboard.routes.rst.txt  alab_management.dashboard.rst.txt  alab_management.data_explorer.rst.txt  alab_management.db.rst.txt  alab_management.device_manager.rst  alab_management.device_manager.rst.txt  alab_management.device_view.dbattributes.rst.txt  alab_management.device_view.device.rst  alab_management.device_view.device_view.rst.txt  alab_management.device_view.rst  alab_management.device_view.rst.txt  alab_management.executor.rst.txt  alab_management.experiment_manager.rst  alab_management.experiment_view.completed_experiment_view.rst  alab_management.experiment_view.experiment.rst  alab_management.experiment_view.experiment_view.rst.txt  alab_management.experiment_view.rst  alab_management.experiment_view.rst.txt  alab_management.lab_manager.rst.txt  alab_management.lab_status.rst.txt  alab_management.lab_view.rst  alab_management.logger.rst.txt  alab_management.op_def.rst.txt  alab_management.resource_manager.enums.rst  alab_management.resource_manager.resource_manager.rst  alab_management.resource_manager.resource_requester.rst  alab_management.resource_manager.rst  alab_management.rst  alab_management.rst.txt  alab_management.sample_manager.rst.txt  alab_management.sample_view.completed_sample_view.rst  alab_management.sample_view.rst  alab_management.sample_view.rst.txt  alab_management.sample_view.sample.rst.txt  alab_management.sample_view.sample_view.rst.txt  (+29 more)
_static/: custom.css  documentation_options.js
alab_management/: __init__.py  alarm.py  config.default.toml  config.py  db.py  device_manager.py  executor.py  experiment_manager.py  lab_manager.py  lab_view.py  logger.py  sample_position.py  task_actor.py  task_launcher.py  task_manager.py  user_input.py
alab_management/_default/: __init__.py  config.toml  pyproject.toml
alab_management/builders/: __init__.py  batching.py  experimentbuilder.py  samplebuilder.py  utils.py
alab_management/dashboard/: __init__.py  lab_views.py  models.py
alab_management/data_explorer/: testing.ipynb
alab_management/device_def/: __init__.py  base_device.py  sample_position.py
alab_management/device_manager/: __init__.py  base_device.py  device_view.py
alab_management/device_view/: __init__.py  dbattributes.py  device.py  device_view.py
alab_management/devices/: base_device.py
alab_management/executor/: executor.py
alab_management/experiment_view/: __init__.py  completed_experiment_view.py  experiment.py  experiment_view.py
alab_management/lab_status/: __init__.py  device_view.py  sample_view.py  task_view.py
alab_management/labgraph_types/: __init__.py  action.py  (+3 more)
client/: README.md  package-lock.json  package.json
example/: config.toml
examples/: README.md
examples/alab_example/: pyproject.toml  submission_script.ipynb
examples/alab_example/alab_example/: __init__.py  config.toml
examples/alab_example/alab_example/devices/: ball_dispenser.py  box_furnace.py  cap_dispenser.py  capping_gripper.py  diffractometer.py  labman_quadrant.py  manual_furnace.py  robot_arm_characterization.py  robot_arm_furnaces.py  scale.py  shaker.py  transfer_rack.py  tube_furnace.py  vial_dispenser_rack.py  vial_labeler.py  xrd_cleaner.py  xrd_dispenser_rack.py
examples/alab_example/alab_example/tasks/: diffraction.py  ending.py  heating.py  heating_with_atmosphere.py  manual_heating.py  moving.py  powder_dosing.py  recover_powder.py  starting.py
examples/alab_example/alab_example/tasks/QR_codes/: README.md
examples/alab_example/alab_example/tasks/program_graphs/: __init__.py  char_program_graph.json  furnace_program_graph.json  program_graph.py  program_graph_examples.ipynb
scripts/: cleanup_lab.py  launch.py  setup_lab.py
tests/: conftest.py  test_auto_hot_restart.py  test_auto_refresh_scenarios.py  test_auto_restart_simple.py  test_auto_restart_unit.py  test_device_manager.py  test_device_view.py  test_experiment_manager.py  test_experiment_view.py  test_graph_op.py  test_init.py  test_lab_manager.py  test_lab_view.py  test_launch.py  test_sample_view.py  test_task_actor.py  test_task_manager.py  test_task_view.py  test_thread_ops.py  test_version_manager.py
(+288 files in other folders)
