[build-system]
requires = ["setuptools>=42", "setuptools-git-versioning", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alab_example"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typing_extensions>=4.4.0",
    "qrcode>=7.4.2",
    "zxing-cpp>=2.2.0",
    "alab-control@git+https://github.com/CederGroupHub/alab_control",
    "ortools>=9.3.10497",
]
